--- a/makefile.nuopc
+++ b/makefile.nuopc
@@ -14,6 +14,9 @@ MOM             = mom5
 ifdef VERSION
   MOM=$(VERSION)
 endif
+ifeq ($(MOM), mom5)
+  USER_CFLAGS=-DMOM5_CAP 
+endif
 
 .SUFFIXES: .F90
 
