Update doxygen documentation; Allow grid cell area computed by ESMF by default

--- a/makefile.nuopc
+++ b/makefile.nuopc
@@ -17,6 +17,9 @@ endif
 ifeq ($(MOM), mom5)
   USER_CFLAGS=-DMOM5_CAP 
 endif
+ifeq ($(MOM), mom6)
+  USER_CFLAGS=-DMOM6_CAP 
+endif
 
 .SUFFIXES: .F90
 
